# sql-middleware

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  THIRD-PARTY-NOTICES.md  bench.sh  debug_libsql_bench.rs  docs.md  test.db
.config/: nextest.toml
bench-harnesses/sqlx_lookup/: Cargo.toml
bench-harnesses/sqlx_lookup/bench_results/report/: index.html
bench-harnesses/sqlx_lookup/bench_results/sqlite_single_row_lookup_sqlx/sqlx/1000/latest/: estimates.json
bench-harnesses/sqlx_lookup/bench_results/sqlite_single_row_lookup_sqlx/sqlx/1000/new/: sample.json  tukey.json
bench-harnesses/sqlx_lookup/bench_results/sqlite_single_row_lookup_sqlx/sqlx/1000/report/: index.html
bench-harnesses/sqlx_lookup/benches/: bench_sqlx_multithread_pool_checkout.rs  sqlite_single_row_lookup_sqlx.rs
bench_results/: decode.md  index.md  interact.md  manual_decode.md  param_bind.md  pool_acquire.md  prepare.md  query_raw.md
bench_results/report/: index.html
bench_results/sqlite_multithread_pool_checkout/report/: index.html
bench_results/sqlite_multithread_pool_checkout_sqlx/report/: index.html
bench_results/sqlite_single_row_lookup/report/: index.html
bench_results/sqlite_single_row_lookup_sqlx/report/: index.html
bench_results/turso_single_row_lookup/report/: index.html
benches/: bench_rusqlite_multithread_pool_checkout.rs  bench_rusqlite_single_row_lookup.rs  bench_turso_single_row_lookup.rs  common.rs  database_benchmark.rs
benches/common/: postgres.rs
docs/: Benchmarks.md  CHANGELOG.md  DRY_violations.md  Issue6.md  README.md  Simulator.md  Simulator_plan.md  TODO.md  api_test_coverage.md  async.md  feat_translation.md  issue4.md  issue5.md  issue_2_adj_api.md  issue_3.md  long_loc_per_file.md  perf_43_to_HEAD.md  plan-tursoTypedDry.prompt.md  tests.md
examples/: libsql_demo.rs  limbo_example.rs
simulator/: Cargo.toml
simulator/docs/: README.md
simulator/plans/: first.json
simulator/src/: args.rs  backend.rs  comparator.rs  driver.rs  logging.rs  main.rs  model.rs  oracle.rs  plan.rs  scheduler.rs
simulator/src/backends/: mod.rs  postgres.rs  sqlite.rs  turso.rs
simulator/src/bugbase/: mod.rs
simulator/src/generation/: mod.rs
simulator/src/properties/: mod.rs
simulator/src/runner/: mod.rs
simulator/src/shrinker/: mod.rs
src/: convenience_items.rs  conversion.rs  db.rs  db2.rs  db_model.rs  error.rs  executor.rs  exports.rs  helpers.rs  lib.rs  middleware.rs  model.rs  mssql.rs  pool.rs  postgres.rs  prelude.rs  query.rs  query_builder.rs  query_utils.rs  results.rs  sqlite.rs  test_utils.rs  translation.rs  tx_outcome.rs  typed.rs  typed_api.rs  typed_postgres.rs  typed_sqlite.rs  typed_turso.rs  types.rs
src/adapters/: mod.rs  params.rs  result_set.rs
src/benchmark/: common.rs  libsql.rs  mod.rs  postgres.rs  sqlite.rs
src/benchmark/postgres/: setup.rs
src/db/: convenience_items.rs  db.rs
src/executor/: dispatch.rs  mod.rs  targets.rs
src/libsql/: config.rs  executor.rs  mod.rs  params.rs  query.rs  transaction.rs
src/limbo/: config.rs  executor.rs  mod.rs  params.rs  query.rs
src/mssql/: client.rs  config.rs  executor.rs  mod.rs  params.rs  prepared.rs  query.rs  transaction.rs
src/pool/: any_conn_wrapper.rs  connection.rs  interaction.rs  mod.rs  types.rs
src/pool/connection/: libsql.rs  mod.rs  mssql.rs  postgres.rs  sqlite.rs  turso.rs
src/postgres/: config.rs  executor.rs  mod.rs  params.rs  query.rs  transaction.rs  typed.rs
src/postgres/typed/: core.rs  dml.rs  mod.rs  prepared.rs  select.rs  tx.rs
src/query_builder/: dml.rs  mod.rs  select.rs
src/results/: mod.rs  result_set.rs  row.rs
src/sqlite/: config.rs  connection.rs  executor.rs  mod.rs  params.rs  prepared.rs  query.rs  transaction.rs  typed.rs  worker.rs
src/sqlite/connection/: core.rs  dml.rs  mod.rs  prepared.rs  select.rs  tx.rs
src/sqlite/typed/: core.rs  dml.rs  mod.rs  prepared.rs  select.rs  tx.rs
src/sqlite/worker/: channel.rs  connection.rs  dispatcher.rs  manager.rs
src/test_utils/: mod.rs  test_helpers.rs
src/test_utils/postgres/: embedded.rs  mod.rs  tests.rs
src/translation/: mod.rs  parsers.rs  scanner.rs
src/turso/: config.rs  executor.rs  mod.rs  params.rs  prepared.rs  query.rs  transaction.rs  typed.rs
src/turso/typed/: core.rs  dml.rs  mod.rs  prepared.rs  select.rs  tx.rs
src/typed/: any.rs  impl_postgres.rs  impl_sqlite.rs  impl_turso.rs  macros.rs  mod.rs  traits.rs
src/typed/any/: mod.rs  ops.rs  queryable.rs
tests/: test02_postgres.rs  test03_sqlite.rs  test04_AnyConnWrapper.rs  test05a_postgres.rs  test05b_libsql.rs  test05c_sqlite.rs  test05d_turso.rs  test06_libsql.rs  test06_libsql_simple.rs  test06_postgres_translation.rs  test06_turso_translation.rs  test07_new_rusqlite.rs  test08_custom_logic_between_txn.rs  test09_typed_api_generic.rs  test1.rs  test10_bad_drop.rs  test11_issue_2.rs  test12_sqlite_evict_when_busy.rs  test2.rs  test2_postgres.rs  test3.rs  test3_old.rs  test3_sqlite.rs  test4.rs  test4.sql  test4_AnyConnWrapper.rs  test4_new_exec_batch.rs  test5a_postgres.rs  test5b_libsql.rs  test5c_sqlite.rs  test5d_turso.rs  test6_libsql.rs  test6_libsql_simple.rs  test6_postgres_translation.rs  test6_silent_ignore_sqlite.rs  test6_turso_translation.rs  test7_new_rusqlite.rs  test_libsql.rs  test_libsql_simple.rs  test_postgres_url_placeholder.rs  (+1 more)
tests/common/: postgres.rs
tests/postgres/test4/: 00_event.sql  02_golfer.sql  03_bettor.sql  04_event_user_player.sql  05_eup_statistic.sql
tests/sqlite/: 00_event.sql  01_golfstatistic.sql  02_player.sql  03_golfuser.sql  04_event_user_player.sql  05_eup_statistic.sql  0x_tables_exist.sql  test1_setup.sql  test2_setup.sql
tests/sqlite/test3/: test3_01_setup.sql  test3_02_setup.sql  test3_03_setup.sql  test3_04_setup.sql  test3_05_setup.sql  test3_06_setup.sql  test3_07_setup.sql  test3_08_setup.sql  test3_09_setup.sql  test3_10_setup.sql
tests/sqlite/test4/: 00_event.sql  02_golfer.sql  03_bettor.sql  04_event_user_player.sql  05_eup_statistic.sql
tests/turso/test4/: 00_event.sql  02_golfer.sql  03_bettor.sql  04_event_user_player.sql  (+2 more)
(+296 files in other folders)
