[package]
name = "sql-middleware"
version = "0.1.7"
edition = "2024"
authors = ["Derek Frye <derek.frye@gmail.com>"]
license = "BSD-2-Clause"
description = "Lightweight async wrappers for tokio-postgres, rusqlite, and tiberius (SQL Server)."
repository = "https://github.com/derekfrye/sql-middleware"
readme = "docs/README.md"
homepage = "https://github.com/derekfrye/sql-middleware"
keywords = ["sql", "sqlx", "sqlite", "postgres", "sqlserver", "postgresql", "sql server"]
documentation = "https://docs.rs/sql-middleware"

[features]
default = ["sqlite", "postgres"]
sqlite = ["deadpool-sqlite"]
postgres = ["tokio-postgres", "deadpool-postgres"]
mssql = ["tiberius", "deadpool-tiberius", "futures-util"]
libsql = ["deadpool-libsql"]
test-utils = ["dep:postgresql_embedded"]
benchmarks = ["dep:criterion", "dep:rand", "dep:rand_chacha"]

[dependencies]
# checked August 2025
# `cargo stale`
tokio = { version = "1", features = ["full"] }  
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-postgres = { version = "0", features = ["with-chrono-0_4", "with-serde_json-1"], optional = true }
chrono = {version = "0", features = ["serde"] }
deadpool-postgres = { version = "0", optional = true }
regex = "1"
clap = { version = "4", features = ["derive"] }
deadpool-sqlite = { version = "0", features = ["rt_tokio_1"], optional = true }
deadpool-libsql = { version = "0", optional = true }
deadpool = "0"
thiserror = "2"
async-trait = "0"
# SQL Server dependencies
tiberius = { version = "0", features = ["chrono", "sql-browser-tokio"], optional = true }
deadpool-tiberius = { version = "0", optional = true }
futures-util = { version = "0", optional = true }
lazy_static = "1"
postgresql_embedded = { version = "0", features = ["bundled"], optional = true }
# Benchmark dependencies
criterion = { version = "0", features = ["async_tokio"], optional = true }
rand = { version = "0", optional = true }
rand_chacha = { version = "0", optional = true }

[package.metadata.docs.rs]
rustdoc-args = ["--deny", "unsafe_code"]


[dependencies.tokio-util]
version = "0"
features = ["full"]

[dev-dependencies]
criterion = { version = "0", features = ["async_tokio"] }
rand = "0"
rand_chacha = "0"
sql-middleware = { path = ".", features = ["test-utils", "benchmarks", "mssql", "libsql"] }

[[bench]]
name = "database_benchmark"
harness = false

[profile.bench]
debug = true
opt-level = 0
