[package]
name = "simulator"
version = "0.1.0"
edition = "2024"

[dependencies]
sql-middleware = { path = "..", default-features = false, features = ["sqlite"] }
clap = { version = "4", features = ["derive"] }
rand = "0"
rand_chacha = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0"
tracing-subscriber = "0"
humantime = "2"
